// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the full index set of every collection is frozen > admin indexes 1`] = `
"[
  {
    "key": {
      "_id": 1
    },
    "name": "_id_"
  },
  {
    "key": {
      "login.email": 1
    },
    "name": "login.email_unique",
    "unique": true
  }
]"
`;

exports[`the full index set of every collection is frozen > company indexes 1`] = `
"[
  {
    "key": {
      "_id": 1
    },
    "name": "_id_"
  },
  {
    "key": {
      "vatNumber": 1
    },
    "name": "vatNumber_unique",
    "unique": true
  },
  {
    "key": {
      "certifiedEmail": 1
    },
    "name": "certifiedEmail_unique",
    "unique": true
  },
  {
    "key": {
      "idShopOwner": 1
    },
    "name": "idShopOwner_list"
  },
  {
    "key": {
      "slug": 1
    },
    "name": "slug_unique",
    "unique": true,
    "partialFilterExpression": {
      "slug": {
        "$type": "string"
      }
    }
  },
  {
    "key": {
      "address.position": "2dsphere"
    },
    "name": "address.position_2dsphere",
    "2dsphereIndexVersion": 3
  },
  {
    "key": {
      "published": 1,
      "deleted": 1
    },
    "name": "published_list"
  },
  {
    "key": {
      "_fts": "text",
      "_ftsx": 1
    },
    "name": "search_text",
    "weights": {
      "description": 1,
      "publicName": 10
    },
    "default_language": "english",
    "language_override": "language",
    "textIndexVersion": 3
  },
  {
    "key": {
      "published": 1,
      "deleted": 1,
      "publicName": 1
    },
    "name": "published_publicName"
  },
  {
    "key": {
      "published": 1,
      "deleted": 1,
      "address.city": 1,
      "publicName": 1
    },
    "name": "published_city_publicName"
  }
]"
`;

exports[`the full index set of every collection is frozen > item indexes 1`] = `
"[
  {
    "key": {
      "_id": 1
    },
    "name": "_id_"
  },
  {
    "key": {
      "idCompany": 1,
      "deleted": 1
    },
    "name": "idCompany_list"
  },
  {
    "key": {
      "idCompany": 1,
      "slug": 1
    },
    "name": "idCompany_slug_unique",
    "unique": true
  },
  {
    "key": {
      "_fts": "text",
      "_ftsx": 1
    },
    "name": "search_text",
    "weights": {
      "description": 1,
      "name": 10
    },
    "default_language": "english",
    "language_override": "language",
    "textIndexVersion": 3
  },
  {
    "key": {
      "idCompany": 1,
      "published": 1,
      "deleted": 1,
      "name": 1
    },
    "name": "idCompany_published_name"
  },
  {
    "key": {
      "idCategory": 1,
      "published": 1,
      "deleted": 1,
      "name": 1
    },
    "name": "idCategory_published_name"
  }
]"
`;

exports[`the full index set of every collection is frozen > itemCategory indexes 1`] = `
"[
  {
    "key": {
      "_id": 1
    },
    "name": "_id_"
  },
  {
    "key": {
      "slug": 1
    },
    "name": "slug_unique",
    "unique": true
  },
  {
    "key": {
      "idParent": 1,
      "position": 1
    },
    "name": "idParent_position"
  }
]"
`;

exports[`the full index set of every collection is frozen > shopOwner indexes 1`] = `
"[
  {
    "key": {
      "_id": 1
    },
    "name": "_id_"
  },
  {
    "key": {
      "login.email": 1
    },
    "name": "login.email_unique",
    "unique": true
  },
  {
    "key": {
      "deleted": 1,
      "disabled": 1,
      "registeredAt": -1,
      "_id": -1
    },
    "name": "tbl_active_registeredAt"
  },
  {
    "key": {
      "deleted": 1,
      "disabled": 1,
      "personalData.lastName": 1,
      "personalData.firstName": 1,
      "_id": 1
    },
    "name": "tbl_active_lastName_firstName"
  },
  {
    "key": {
      "deleted": 1,
      "disabled": 1,
      "personalData.firstName": 1,
      "_id": 1
    },
    "name": "tbl_active_firstName"
  },
  {
    "key": {
      "deleted": 1,
      "disabled": 1,
      "personalData.address.city": 1,
      "_id": 1
    },
    "name": "tbl_active_city"
  },
  {
    "key": {
      "registeredAt": 1
    },
    "name": "registeredAt_series"
  }
]"
`;

exports[`the full index set of every collection is frozen > user indexes 1`] = `
"[
  {
    "key": {
      "_id": 1
    },
    "name": "_id_"
  },
  {
    "key": {
      "login.email": 1
    },
    "name": "login.email_unique",
    "unique": true
  }
]"
`;

exports[`the full validator of every collection is frozen > admin validation mode 1`] = `
"{
  "validationLevel": "strict",
  "validationAction": "error"
}"
`;

exports[`the full validator of every collection is frozen > admin validator 1`] = `
"{
  "$jsonSchema": {
    "bsonType": "object",
    "title": "admin",
    "required": [
      "login",
      "personalData"
    ],
    "properties": {
      "_id": {
        "bsonType": "objectId"
      },
      "login": {
        "bsonType": "object",
        "title": "object",
        "required": [
          "email",
          "password"
        ],
        "properties": {
          "email": {
            "bsonType": "string",
            "maxLength": 250
          },
          "password": {
            "bsonType": "string",
            "minLength": 60,
            "maxLength": 60
          },
          "firstLogin": {
            "bsonType": "date"
          },
          "lastLogin": {
            "bsonType": "date"
          },
          "onboardingStep": {
            "bsonType": "string",
            "maxLength": 4
          },
          "onboardingDone": {
            "bsonType": "bool"
          },
          "rememberMe": {
            "bsonType": "bool"
          }
        },
        "additionalProperties": false
      },
      "personalData": {
        "bsonType": "object",
        "title": "object",
        "required": [
          "firstName",
          "lastName"
        ],
        "properties": {
          "firstName": {
            "bsonType": "string",
            "maxLength": 100
          },
          "lastName": {
            "bsonType": "string",
            "maxLength": 100
          }
        },
        "additionalProperties": false
      },
      "deleted": {
        "bsonType": "date",
        "description": "deletion date"
      },
      "disabled": {
        "bsonType": "bool",
        "description": "present and true: disabled, absent: login allowed"
      },
      "resetPwd": {
        "bsonType": "object",
        "title": "object",
        "required": [
          "resetDateReq",
          "resetHash"
        ],
        "properties": {
          "resetDateReq": {
            "bsonType": "date",
            "description": "request date"
          },
          "resetHash": {
            "bsonType": "string",
            "minLength": 50,
            "maxLength": 50,
            "description": "comparison hash"
          }
        },
        "additionalProperties": false
      },
      "__v": {
        "bsonType": "int"
      }
    },
    "additionalProperties": false
  }
}"
`;

exports[`the full validator of every collection is frozen > company validation mode 1`] = `
"{
  "validationLevel": "strict",
  "validationAction": "error"
}"
`;

exports[`the full validator of every collection is frozen > company validator 1`] = `
"{
  "$and": [
    {
      "$jsonSchema": {
        "bsonType": "object",
        "title": "company",
        "required": [
          "idShopOwner",
          "legalName",
          "vatNumber",
          "contactPerson",
          "administrator",
          "certifiedEmail",
          "registryExtract",
          "address",
          "published"
        ],
        "properties": {
          "_id": {
            "bsonType": "objectId"
          },
          "idShopOwner": {
            "bsonType": "objectId"
          },
          "legalName": {
            "bsonType": "string",
            "maxLength": 100
          },
          "vatNumber": {
            "bsonType": "string",
            "maxLength": 11,
            "minLength": 11
          },
          "taxCode": {
            "bsonType": "string",
            "maxLength": 11,
            "minLength": 11
          },
          "contactPerson": {
            "bsonType": "string",
            "maxLength": 50
          },
          "administrator": {
            "bsonType": "string",
            "maxLength": 50
          },
          "uniqueCode": {
            "bsonType": "string",
            "minLength": 7,
            "maxLength": 7
          },
          "certifiedEmail": {
            "bsonType": "string",
            "maxLength": 250
          },
          "address": {
            "bsonType": "object",
            "title": "object",
            "required": [
              "street",
              "postalCode",
              "city",
              "province",
              "position"
            ],
            "properties": {
              "street": {
                "bsonType": "string",
                "maxLength": 100
              },
              "postalCode": {
                "bsonType": "string",
                "minLength": 5,
                "maxLength": 5
              },
              "city": {
                "bsonType": "string",
                "maxLength": 100
              },
              "province": {
                "bsonType": "string",
                "minLength": 2,
                "maxLength": 2
              },
              "position": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "type",
                  "coordinates"
                ],
                "properties": {
                  "type": {
                    "bsonType": "string",
                    "maxLength": 5,
                    "description": "Point"
                  },
                  "coordinates": {
                    "bsonType": "array",
                    "minItems": 2,
                    "maxItems": 2,
                    "items": [
                      {
                        "bsonType": [
                          "double",
                          "int",
                          "long"
                        ],
                        "maximum": 180,
                        "minimum": -180,
                        "description": "longitude"
                      },
                      {
                        "bsonType": [
                          "double",
                          "int",
                          "long"
                        ],
                        "maximum": 90,
                        "minimum": -90,
                        "description": "latitude"
                      }
                    ]
                  }
                },
                "additionalProperties": false
              }
            },
            "additionalProperties": false
          },
          "registryExtract": {
            "bsonType": "string",
            "maxLength": 1000
          },
          "publicName": {
            "bsonType": "string",
            "maxLength": 100,
            "description": "the trading name shown to customers, not the registered legal name"
          },
          "slug": {
            "bsonType": "string",
            "minLength": 2,
            "maxLength": 120,
            "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
            "description": "URL segment of /shop/:slug — lowercase, digits and single hyphens"
          },
          "description": {
            "bsonType": "string",
            "maxLength": 2000
          },
          "published": {
            "bsonType": "bool",
            "description": "false until the owner puts the shop live; nothing public reads a false row"
          },
          "deleted": {
            "bsonType": "date"
          },
          "__v": {
            "bsonType": "int"
          }
        },
        "additionalProperties": false
      }
    },
    {
      "$expr": {
        "$or": [
          {
            "$ne": [
              "$published",
              true
            ]
          },
          {
            "$and": [
              {
                "$eq": [
                  {
                    "$type": "$slug"
                  },
                  "string"
                ]
              },
              {
                "$eq": [
                  {
                    "$type": "$publicName"
                  },
                  "string"
                ]
              }
            ]
          }
        ]
      }
    }
  ]
}"
`;

exports[`the full validator of every collection is frozen > item validation mode 1`] = `
"{
  "validationLevel": "strict",
  "validationAction": "error"
}"
`;

exports[`the full validator of every collection is frozen > item validator 1`] = `
"{
  "$jsonSchema": {
    "bsonType": "object",
    "title": "item",
    "required": [
      "idCompany",
      "idCategory",
      "name",
      "description",
      "slug",
      "published"
    ],
    "properties": {
      "_id": {
        "bsonType": "objectId"
      },
      "idCompany": {
        "bsonType": "objectId",
        "description": "the company that sells this — the shop, since a company IS the shop here"
      },
      "idCategory": {
        "bsonType": "objectId",
        "description": "an itemCategory row, at either of its two levels"
      },
      "name": {
        "bsonType": "string",
        "maxLength": 150
      },
      "description": {
        "bsonType": "string",
        "maxLength": 2000
      },
      "slug": {
        "bsonType": "string",
        "minLength": 2,
        "maxLength": 160,
        "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
        "description": "URL segment of /shop/:slug/item/:itemSlug — unique within the company, not globally"
      },
      "published": {
        "bsonType": "bool",
        "description": "false while a draft; a public read also requires the company to be published"
      },
      "deleted": {
        "bsonType": "date"
      },
      "__v": {
        "bsonType": "int"
      }
    },
    "additionalProperties": false
  }
}"
`;

exports[`the full validator of every collection is frozen > itemCategory validation mode 1`] = `
"{
  "validationLevel": "strict",
  "validationAction": "error"
}"
`;

exports[`the full validator of every collection is frozen > itemCategory validator 1`] = `
"{
  "$jsonSchema": {
    "bsonType": "object",
    "title": "itemCategory",
    "required": [
      "name",
      "slug",
      "position"
    ],
    "properties": {
      "_id": {
        "bsonType": "objectId"
      },
      "name": {
        "bsonType": "string",
        "maxLength": 100
      },
      "slug": {
        "bsonType": "string",
        "minLength": 2,
        "maxLength": 120,
        "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
        "description": "URL segment of /category/:slug — unique across both levels"
      },
      "idParent": {
        "bsonType": "objectId",
        "description": "absent = top-level category; present = subcategory. Depth beyond 2 is refused by the resolver"
      },
      "position": {
        "bsonType": "int",
        "minimum": 0,
        "description": "sort ordinal within the level — NOT the GeoJSON position from lib/schemas/geo.js"
      },
      "deleted": {
        "bsonType": "date"
      },
      "__v": {
        "bsonType": "int"
      }
    },
    "additionalProperties": false
  }
}"
`;

exports[`the full validator of every collection is frozen > shopOwner validation mode 1`] = `
"{
  "validationLevel": "strict",
  "validationAction": "error"
}"
`;

exports[`the full validator of every collection is frozen > shopOwner validator 1`] = `
"{
  "$jsonSchema": {
    "bsonType": "object",
    "title": "shopOwner",
    "required": [
      "login",
      "personalData",
      "registeredAt"
    ],
    "properties": {
      "_id": {
        "bsonType": "objectId"
      },
      "login": {
        "bsonType": "object",
        "title": "object",
        "required": [
          "email",
          "password"
        ],
        "properties": {
          "email": {
            "bsonType": "string",
            "maxLength": 250
          },
          "password": {
            "bsonType": "string",
            "minLength": 60,
            "maxLength": 60
          },
          "firstLogin": {
            "bsonType": "date"
          },
          "lastLogin": {
            "bsonType": "date"
          },
          "onboardingStep": {
            "bsonType": "string",
            "maxLength": 4
          },
          "onboardingDone": {
            "bsonType": "bool"
          },
          "rememberMe": {
            "bsonType": "bool"
          }
        },
        "additionalProperties": false
      },
      "personalData": {
        "bsonType": "object",
        "title": "object",
        "required": [
          "firstName",
          "lastName",
          "birth",
          "address",
          "contacts"
        ],
        "properties": {
          "firstName": {
            "bsonType": "string",
            "maxLength": 100
          },
          "lastName": {
            "bsonType": "string",
            "maxLength": 100
          },
          "birth": {
            "bsonType": "object",
            "title": "object",
            "required": [
              "date"
            ],
            "properties": {
              "date": {
                "bsonType": "date"
              }
            },
            "additionalProperties": false
          },
          "address": {
            "bsonType": "object",
            "title": "object",
            "required": [
              "street",
              "postalCode",
              "city",
              "province"
            ],
            "properties": {
              "street": {
                "bsonType": "string",
                "maxLength": 250
              },
              "postalCode": {
                "bsonType": "string",
                "minLength": 5,
                "maxLength": 5
              },
              "city": {
                "bsonType": "string",
                "maxLength": 100
              },
              "province": {
                "bsonType": "string",
                "minLength": 2,
                "maxLength": 2
              },
              "position": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "type",
                  "coordinates"
                ],
                "properties": {
                  "type": {
                    "bsonType": "string",
                    "maxLength": 5,
                    "description": "Point"
                  },
                  "coordinates": {
                    "bsonType": "array",
                    "minItems": 2,
                    "maxItems": 2,
                    "items": [
                      {
                        "bsonType": [
                          "double",
                          "int",
                          "long"
                        ],
                        "maximum": 180,
                        "minimum": -180,
                        "description": "longitude"
                      },
                      {
                        "bsonType": [
                          "double",
                          "int",
                          "long"
                        ],
                        "maximum": 90,
                        "minimum": -90,
                        "description": "latitude"
                      }
                    ]
                  }
                },
                "additionalProperties": false
              }
            },
            "additionalProperties": false
          },
          "contacts": {
            "bsonType": "object",
            "title": "object",
            "required": [
              "mobile",
              "email"
            ],
            "properties": {
              "mobile": {
                "bsonType": "string",
                "maxLength": 12
              },
              "landline": {
                "bsonType": "string",
                "maxLength": 12
              },
              "email": {
                "bsonType": "string",
                "maxLength": 250
              }
            },
            "additionalProperties": false
          }
        },
        "additionalProperties": false
      },
      "registeredAt": {
        "bsonType": "date",
        "description": "sign-up date"
      },
      "deleted": {
        "bsonType": "date",
        "description": "deletion date"
      },
      "disabled": {
        "bsonType": "bool",
        "description": "present and true: disabled, absent: login allowed"
      },
      "waitApprov": {
        "bsonType": "bool",
        "description": "present and true: awaiting admin approval (flagged by telepromoter) or deleted"
      },
      "notes": {
        "bsonType": "string",
        "maxLength": 2000,
        "description": "internal notes written by an admin about this shop owner, never visible to them"
      },
      "resetPwd": {
        "bsonType": "object",
        "title": "object",
        "required": [
          "resetDateReq",
          "resetHash"
        ],
        "properties": {
          "resetDateReq": {
            "bsonType": "date",
            "description": "request date"
          },
          "resetHash": {
            "bsonType": "string",
            "minLength": 50,
            "maxLength": 50,
            "description": "comparison hash"
          }
        },
        "additionalProperties": false
      },
      "emailVerify": {
        "bsonType": "object",
        "title": "object",
        "properties": {
          "valid": {
            "bsonType": "bool",
            "description": "true once a verification link has been used"
          },
          "hash": {
            "bsonType": "string",
            "minLength": 50,
            "maxLength": 50,
            "description": "comparison hash, EMAIL_HASH_LEN in koa-utils"
          },
          "dateLastReq": {
            "bsonType": "date",
            "description": "request date, sets the 3-day window"
          },
          "requestTimes": {
            "bsonType": "int",
            "description": "wrong-hash attempts, the fifth deletes the account"
          },
          "newEmailTmp": {
            "bsonType": "string",
            "maxLength": 250,
            "description": "new email awaiting confirmation during an email change"
          }
        },
        "additionalProperties": false
      },
      "__v": {
        "bsonType": "int"
      }
    },
    "additionalProperties": false
  }
}"
`;

exports[`the full validator of every collection is frozen > user validation mode 1`] = `
"{
  "validationLevel": "strict",
  "validationAction": "error"
}"
`;

exports[`the full validator of every collection is frozen > user validator 1`] = `
"{
  "$and": [
    {
      "$jsonSchema": {
        "bsonType": "object",
        "title": "user",
        "required": [
          "login",
          "registeredAt"
        ],
        "properties": {
          "_id": {
            "bsonType": "objectId"
          },
          "login": {
            "bsonType": "object",
            "title": "object",
            "required": [
              "email",
              "password"
            ],
            "properties": {
              "email": {
                "bsonType": "string",
                "maxLength": 250
              },
              "password": {
                "bsonType": "string",
                "minLength": 60,
                "maxLength": 60
              },
              "firstLogin": {
                "bsonType": "date"
              },
              "lastLogin": {
                "bsonType": "date"
              },
              "onboardingStep": {
                "bsonType": "string",
                "maxLength": 4
              },
              "onboardingDone": {
                "bsonType": "bool"
              },
              "rememberMe": {
                "bsonType": "bool"
              }
            },
            "additionalProperties": false
          },
          "personalData": {
            "bsonType": "object",
            "title": "object",
            "required": [
              "firstName",
              "lastName"
            ],
            "properties": {
              "firstName": {
                "bsonType": "string",
                "maxLength": 100
              },
              "lastName": {
                "bsonType": "string",
                "maxLength": 100
              },
              "birth": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "date"
                ],
                "properties": {
                  "date": {
                    "bsonType": "date"
                  }
                },
                "additionalProperties": false
              },
              "contacts": {
                "bsonType": "object",
                "title": "object",
                "properties": {
                  "mobile": {
                    "bsonType": "string",
                    "maxLength": 12
                  },
                  "landline": {
                    "bsonType": "string",
                    "maxLength": 12
                  },
                  "email": {
                    "bsonType": "string",
                    "maxLength": 250,
                    "description": "a second address to be reached on — the credential is login.email"
                  }
                },
                "additionalProperties": false
              }
            },
            "additionalProperties": false
          },
          "addresses": {
            "bsonType": "array",
            "items": {
              "bsonType": "object",
              "title": "object",
              "required": [
                "_id",
                "street",
                "postalCode",
                "city",
                "province"
              ],
              "properties": {
                "_id": {
                  "bsonType": "objectId"
                },
                "label": {
                  "bsonType": "string",
                  "maxLength": 50,
                  "description": "what the customer calls this address — \\"home\\", \\"office\\". Optional and free text"
                },
                "street": {
                  "bsonType": "string",
                  "maxLength": 250
                },
                "postalCode": {
                  "bsonType": "string",
                  "minLength": 5,
                  "maxLength": 5
                },
                "city": {
                  "bsonType": "string",
                  "maxLength": 100
                },
                "province": {
                  "bsonType": "string",
                  "minLength": 2,
                  "maxLength": 2
                },
                "position": {
                  "bsonType": "object",
                  "title": "object",
                  "required": [
                    "type",
                    "coordinates"
                  ],
                  "properties": {
                    "type": {
                      "bsonType": "string",
                      "maxLength": 5,
                      "description": "Point"
                    },
                    "coordinates": {
                      "bsonType": "array",
                      "minItems": 2,
                      "maxItems": 2,
                      "items": [
                        {
                          "bsonType": [
                            "double",
                            "int",
                            "long"
                          ],
                          "maximum": 180,
                          "minimum": -180,
                          "description": "longitude"
                        },
                        {
                          "bsonType": [
                            "double",
                            "int",
                            "long"
                          ],
                          "maximum": 90,
                          "minimum": -90,
                          "description": "latitude"
                        }
                      ]
                    }
                  },
                  "additionalProperties": false
                }
              },
              "additionalProperties": false
            },
            "description": "every address this customer has saved; the default is named by defaultAddress"
          },
          "defaultAddress": {
            "bsonType": "objectId",
            "description": "the _id of one element of addresses — see the $expr rule alongside this schema"
          },
          "registeredAt": {
            "bsonType": "date",
            "description": "sign-up date"
          },
          "deleted": {
            "bsonType": "date",
            "description": "deletion date"
          },
          "disabled": {
            "bsonType": "bool",
            "description": "present and true: disabled, absent: login allowed"
          },
          "resetPwd": {
            "bsonType": "object",
            "title": "object",
            "required": [
              "resetDateReq",
              "resetHash"
            ],
            "properties": {
              "resetDateReq": {
                "bsonType": "date",
                "description": "request date"
              },
              "resetHash": {
                "bsonType": "string",
                "minLength": 50,
                "maxLength": 50,
                "description": "comparison hash"
              }
            },
            "additionalProperties": false
          },
          "emailVerify": {
            "bsonType": "object",
            "title": "object",
            "properties": {
              "valid": {
                "bsonType": "bool",
                "description": "true once a verification link has been used"
              },
              "hash": {
                "bsonType": "string",
                "minLength": 50,
                "maxLength": 50,
                "description": "comparison hash, EMAIL_HASH_LEN in koa-utils"
              },
              "dateLastReq": {
                "bsonType": "date",
                "description": "request date, sets the 3-day window"
              },
              "requestTimes": {
                "bsonType": "int",
                "description": "wrong-hash attempts, the fifth deletes the account"
              },
              "newEmailTmp": {
                "bsonType": "string",
                "maxLength": 250,
                "description": "new email awaiting confirmation during an email change"
              }
            },
            "additionalProperties": false
          },
          "__v": {
            "bsonType": "int"
          }
        },
        "additionalProperties": false
      }
    },
    {
      "$expr": {
        "$or": [
          {
            "$eq": [
              {
                "$type": "$defaultAddress"
              },
              "missing"
            ]
          },
          {
            "$in": [
              "$defaultAddress",
              {
                "$map": {
                  "input": {
                    "$ifNull": [
                      "$addresses",
                      []
                    ]
                  },
                  "in": "$$this._id"
                }
              }
            ]
          }
        ]
      }
    }
  ]
}"
`;
